docs/examples/gatewayAPI/defaultGateway.yaml
# The default gateway for GatewayAPI routes
# This will redirect any requests on port 80 (HTTP) to port 443 (HTTPs)`
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway-eck
  namespace: kube-system
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      port: 443
      protocol: TLS
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-filter-redirect
  namespace: kube-system
spec:
  parentRefs:
  - name: cilium-gateway-eck
    namespace: kube-system
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
